--- a/style.css
+++ b/style.css
@@ -10,3 +10,90 @@ body {
   height: 100vh;
   margin: 0 auto;
 }
+
+.grid {
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: 450px 220px;
+  grid-template-rows: 110px 450px 380px;
+  margin-bottom: 15px;
+}
+
+.headerSpace {
+  height: 50px;
+}
+
+.header {
+  color: white;
+  background-color: black;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.headerContent {
+  display: flex;
+  justify-content: space-between;
+  padding: 3px;
+}
+
+.leftSide {
+  display: flex;
+  width: 450px;
+  padding-left: 10px;
+}
+
+.center {
+  padding-left: 50px;
+}
+
+.rightSide {
+  width: 220px;
+}
+
+span {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.content {
+  background-color: #f14011;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  display: flex;
+  flex-direction: column-reverse;
+  font-size: 220px;
+  font-weight: 600;
+}
+
+.nav {
+  background-color: #f14011;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.footer {
+  background-color: #f14011;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+
+.footer span {
+  display: block;
+}
+
+.main {
+  font-size: 190px;
+  font-weight: 600;
+}
+
+.sub {
+  color: #e9dbcc;
+  font-size: 30px;
+  padding: 5px 20px;
+}
