--- a/style.css
+++ b/style.css
@@ -6,3 +6,92 @@ body {
   width: 100%;
   height: 100vh;
 }
+
+.header {
+  font-size: 50px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-rows: repeat(6, 300px);
+}
+
+.poster {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  padding: 20px 3px;
+}
+
+.poster div {
+  width: 100%;
+}
+
+.main {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.sub {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.img {
+  background-size: cover;
+  background-position: center center;
+}
+
+.one {
+  background-color: #ffc048;
+}
+
+.two {
+  background-image: url("https://images.unsplash.com/photo-1537905569824-f89f14cceb68?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=694&q=80");
+}
+
+.three {
+  background-color: #3c40c6;
+}
+
+.four {
+  background-image: url("https://images.unsplash.com/photo-1523987355523-c7b5b0dd90a7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80");
+}
+
+.five {
+  background-color: #34e7e4;
+}
+
+.six {
+  background-color: #ff5e57;
+}
+
+.seven {
+  background-color: #05c46b;
+}
+
+.eight {
+  background-color: #ccae62;
+}
+
+.nine {
+  background-image: url("https://images.unsplash.com/photo-1532339142463-fd0a8979791a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80");
+}
+
+.ten {
+  background-color: #b33939;
+}
+
+.eleven {
+  background-image: url("https://images.unsplash.com/photo-1470246973918-29a93221c455?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80");
+}
+
+.twelve {
+  background-color: #808e9b;
+}
