--- a/src/scss/_elements.scss
+++ b/src/scss/_elements.scss
@@ -9,6 +9,7 @@
   color: inherit;
   border: 1px solid rgba(0, 0, 0, 0.3);
   padding: 10px 40px;
+  margin-right: 10px;
   font-size: 15px;
   border-radius: 20px;
   transition: background-color 0.3s linear;
