--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,102 @@
-@import url("https://fonts.googleapis.com/css2?family=B612+Mono&family=DM+Serif+Display:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap");
 @import "_variables";
 @import "_elements";
 
 * {
   box-sizing: border-box;
+}
+
+nav {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  text-transform: uppercase;
+  padding: 5px 15px;
+  align-items: center;
+  .logo {
+    font-size: 35px;
+    font-family: $logo;
+  }
+  .colors {
+    display: flex;
+    .color {
+      width: 20px;
+      height: 20px;
+      background-color: red;
+      border-radius: 10px;
+      margin-right: 5px;
+    }
+    span {
+      margin-right: 10px;
+    }
+  }
+  .icons {
+    i {
+      margin-left: 10px;
+    }
+  }
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  .post {
+    background-color: green;
+    &:nth-child(2) {
+      background-color: #e5c254;
+    }
+    &:nth-child(7) {
+      background-color: #97c2de;
+    }
+    .post__header,
+    .post__footer {
+      @extend %nameTag;
+    }
+    .post__content {
+      height: 380px;
+      padding: 40px 0;
+      img {
+        display: block;
+        width: 50%;
+        height: 60%;
+        margin: 0 auto;
+      }
+      .content__exp {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        width: 90%;
+        padding: 20px 20px;
+      }
+    }
+  }
+}
+
+footer {
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  .upside,
+  .downside {
+    display: flex;
+    width: 100%;
+    height: 50%;
+    text-align: center;
+  }
+  .upside {
+    padding: 50px 0px;
+    justify-content: center;
+  }
+  .downside {
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px;
+    a {
+      color: black;
+    }
+  }
 }
