--- a/css/main.css
+++ b/css/main.css
@@ -59,10 +59,9 @@ a {
     padding: 0 5px;
 }
 
-.sns i:hover {
+.sns a:hover {
     color: #494646;
     cursor: pointer;
-    transition: 
 }
 
 .text-zone {
@@ -95,14 +94,9 @@ a {
     height: 100vh;
 }
 
-
-.greetingImg {
-    background-image: url(/images/satya-nadella.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 300px;
-    height: 300px;
+.greetingImg img {
+    width: 350px;
+    height: 350px;
     border-radius: 50%;
 }
 
